--- a/index.html
+++ b/index.html
@@ -81,29 +81,14 @@
       font-size: 14px;
     }
 
-    #warningPanel {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(30,30,30,0.95);
-      color: white;
-      padding: 20px;
-      font-size: 15px;
-      border-top: 2px solid #ff4444;
-      z-index: 2000;
-      display: none;
+    .flashing {
+      animation: flash 1s infinite;
     }
 
-    #warningContent {
-      max-width: 800px;
-      margin: auto;
-    }
-
-    #closeWarning {
-      float: right;
-      cursor: pointer;
-      font-size: 20px;
+    @keyframes flash {
+      0% { stroke: red; }
+      50% { stroke: yellow; }
+      100% { stroke: red; }
     }
   </style>
 </head>
@@ -122,18 +107,6 @@
     <b>AI Weather Summary</b><br/>
     Conditions are currently calm in most areas.<br/>
     Watch for updates on severe weather alerts.
-  </div>
-
-  <div id="warningPanel">
-    <div id="warningContent">
-      <span id="closeWarning" onclick="closeWarning()">✖</span>
-      <h3 id="eventTitle"></h3>
-      <p><strong>Affected Area:</strong> <span id="areaDesc"></span></p>
-      <p><strong>Hazard:</strong> <span id="hazardDesc"></span></p>
-      <p><strong>Source:</strong> <span id="sourceDesc"></span></p>
-      <p><strong>Expires:</strong> <span id="expiresDesc"></span></p>
-      <p><strong>Time Left:</strong> <span id="countdownTimer"></span></p>
-    </div>
   </div>
 
   <div id="controls">
@@ -230,57 +203,40 @@
     loadRadar();
     setInterval(loadRadar, 5 * 60 * 1000);
 
-    function closeWarning() {
-      document.getElementById("warningPanel").style.display = "none";
-    }
-
-    function updateCountdown(expirationTime) {
-      const countdownEl = document.getElementById("countdownTimer");
-      const end = new Date(expirationTime);
-      function update() {
-        const now = new Date();
-        const diff = end - now;
-        if (diff <= 0) {
-          countdownEl.textContent = "Expired";
-          return;
-        }
-        const mins = Math.floor(diff / 60000);
-        const secs = Math.floor((diff % 60000) / 1000);
-        countdownEl.textContent = `${mins}m ${secs}s`;
-        setTimeout(update, 1000);
-      }
-      update();
-    }
-
+    // Alerts
     fetch('https://api.weather.gov/alerts/active')
       .then(response => response.json())
       .then(data => {
         data.features.forEach(alert => {
           const coords = alert.geometry?.coordinates;
           const eventType = alert.properties.event;
+          const headline = alert.properties.headline || "";
           let color = "orange";
+          let className = "";
 
-          if (eventType.includes("Tornado")) color = "red";
-          else if (eventType.includes("Severe Thunderstorm")) color = "yellow";
-          else if (eventType.includes("Flood")) color = "green";
-          else if (eventType.includes("Winter")) color = "purple";
-          else if (eventType.includes("Special Weather Statement")) color = "blue";
+          if (eventType.includes("Tornado")) {
+            color = "red";
+            if (headline.toLowerCase().includes("confirmed")) {
+              className = "flashing";
+            }
+          } else if (eventType.includes("Severe Thunderstorm")) {
+            color = "yellow";
+          } else if (eventType.includes("Flood")) {
+            color = "green";
+          } else if (eventType.includes("Winter")) {
+            color = "purple";
+          } else if (eventType.includes("Special Weather Statement")) {
+            color = "blue";
+          }
 
           if (coords) {
-            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+            const polygon = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
               color,
               fillOpacity: 0.3,
-              weight: 2
-            }).on('click', () => {
-              document.getElementById("eventTitle").textContent = alert.properties.event;
-              document.getElementById("areaDesc").textContent = alert.properties.areaDesc || "Unknown";
-              document.getElementById("hazardDesc").textContent = alert.properties.description || "N/A";
-              document.getElementById("sourceDesc").textContent = alert.properties.sender || "Unknown";
-              document.getElementById("expiresDesc").textContent = alert.properties.expires || "Unknown";
-              document.getElementById("warningPanel").style.display = "block";
-              updateCountdown(alert.properties.expires);
-            });
-            poly.addTo(map);
+              weight: 2,
+              className
+            }).bindPopup(`<b>${eventType}</b><br>${headline}`);
+            polygon.addTo(map);
           }
         });
       });
