--- a/index.html
+++ b/index.html
@@ -2,105 +2,279 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weather Radar</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>StormTracker13 TrackingNQSevereWeather Real Time Radar</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    html, body {
+    html, body, #map {
+      height: 100%;
       margin: 0;
-      padding: 0;
-      height: 100%;
+      font-family: sans-serif;
     }
-    #map {
-      width: 100%;
-      height: 100%;
+
+    #controls {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 12px 20px;
+      border-radius: 12px;
+      z-index: 999;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      gap: 12px;
     }
+
+    #slider {
+      width: 300px;
+    }
+
+    #playPause {
+      background: #444;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #timestamp {
+      min-width: 200px;
+    }
+
+    #legend {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 10px;
+      border-radius: 8px;
+      font-size: 14px;
+      z-index: 1000;
+    }
+
+    #legend div {
+      margin-bottom: 5px;
+    }
+
+    .color-box {
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      margin-right: 6px;
+      vertical-align: middle;
+    }
+
+    #aiSummary {
+      position: absolute;
+      bottom: 100px;
+      right: 10px;
+      width: 250px;
+      background: rgba(0,0,0,0.8);
+      color: white;
+      padding: 12px;
+      border-radius: 10px;
+      z-index: 1000;
+      font-size: 14px;
+    }
+
     #warningPanel {
       position: absolute;
-      top: 60px;
+      top: 70px;
       left: 10px;
-      width: 260px;
-      background: rgba(255, 255, 255, 0.95);
-      color: black;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #000;
-      z-index: 1001;
+      width: 250px;
+      max-height: 300px;
+      overflow-y: auto;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      padding: 12px;
+      border-radius: 10px;
+      z-index: 1000;
       font-size: 14px;
       cursor: move;
-    }
-    #warningHeader {
-      background: #333;
-      color: white;
-      padding: 10px;
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
-      font-weight: bold;
-    }
-    #warningContent {
-      padding: 10px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <div id="warningPanel">
-    <div id="warningHeader">Warning Details</div>
-    <div id="warningContent">Click a warning to see details here.</div>
+
+  <div id="legend">
+    <div><span class="color-box" style="background:red"></span> Tornado Warning</div>
+    <div><span class="color-box" style="background:yellow"></span> Severe Thunderstorm Warning</div>
+    <div><span class="color-box" style="background:green"></span> Flood Warning</div>
+    <div><span class="color-box" style="background:purple"></span> Winter Weather</div>
+    <div><span class="color-box" style="background:blue"></span> Special Weather Statement</div>
   </div>
+
+  <div id="aiSummary">
+    <b>AI Weather Summary</b><br/>
+    Conditions are currently calm in most areas.<br/>
+    Watch for updates on severe weather alerts.
+  </div>
+
+  <div id="warningPanel">
+    <b>Warning Details</b>
+    <div id="warningContent">No warning selected.</div>
+  </div>
+
+  <div id="controls">
+    <button id="playPause">▶️ Play</button>
+    <input type="range" id="slider" min="0" max="0" value="0"/>
+    <div id="timestamp">Loading radar...</div>
+  </div>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([37.8, -96], 4);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '© OpenStreetMap'
+    const map = L.map('map').setView([39.5, -98.35], 5);
+
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; OpenStreetMap & CartoDB',
+      maxZoom: 18
     }).addTo(map);
 
-    const warningPanel = document.getElementById("warningPanel");
-    const warningHeader = document.getElementById("warningHeader");
+    const slider = document.getElementById('slider');
+    const timestampEl = document.getElementById('timestamp');
+    const playPauseBtn = document.getElementById('playPause');
 
-    warningHeader.onmousedown = function (e) {
-      let shiftX = e.clientX - warningPanel.getBoundingClientRect().left;
-      let shiftY = e.clientY - warningPanel.getBoundingClientRect().top;
+    let radarLayers = [];
+    let frameTimes = [];
+    let currentLayer = null;
+    let playInterval = null;
+    let currentIndex = 0;
 
-      function moveAt(pageX, pageY) {
-        warningPanel.style.left = pageX - shiftX + 'px';
-        warningPanel.style.top = pageY - shiftY + 'px';
+    function loadRadar() {
+      if (currentLayer) {
+        map.removeLayer(currentLayer);
       }
+      radarLayers = [];
+      frameTimes = [];
 
-      function onMouseMove(e) {
-        moveAt(e.pageX, e.pageY);
-      }
+      fetch('https://api.rainviewer.com/public/weather-maps.json')
+        .then(res => res.json())
+        .then(data => {
+          const frames = data.radar.past.concat(data.radar.nowcast || []);
+          frames.forEach(frame => {
+            const tileUrl = `https://tilecache.rainviewer.com/v2/radar/${frame.path}/512/{z}/{x}/{y}/2/1_1.png`;
+            const layer = L.tileLayer(tileUrl, { opacity: 0.8 });
+            radarLayers.push(layer);
+            frameTimes.push(new Date(frame.time * 1000));
+          });
 
-      document.addEventListener('mousemove', onMouseMove);
-      document.onmouseup = function () {
-        document.removeEventListener('mousemove', onMouseMove);
-        document.onmouseup = null;
-      };
-    };
-
-    warningHeader.ondragstart = () => false;
-
-    function showWarningInPanel(title, detail) {
-      document.getElementById("warningContent").innerHTML = `<b>${title}</b><br>${detail}`;
+          slider.max = radarLayers.length - 1;
+          slider.value = radarLayers.length - 1;
+          currentIndex = radarLayers.length - 1;
+          showFrame(currentIndex);
+        });
     }
 
+    function showFrame(index) {
+      if (currentLayer) {
+        map.removeLayer(currentLayer);
+      }
+      currentLayer = radarLayers[index];
+      currentLayer.addTo(map);
+
+      const time = frameTimes[index];
+      timestampEl.textContent = `Radar time: ${time.toLocaleString()}`;
+      slider.value = index;
+      currentIndex = index;
+    }
+
+    function playRadar() {
+      playInterval = setInterval(() => {
+        currentIndex = (currentIndex + 1) % radarLayers.length;
+        showFrame(currentIndex);
+      }, 600);
+    }
+
+    function pauseRadar() {
+      clearInterval(playInterval);
+      playInterval = null;
+    }
+
+    playPauseBtn.addEventListener('click', () => {
+      if (playInterval) {
+        pauseRadar();
+        playPauseBtn.textContent = "▶️ Play";
+      } else {
+        playRadar();
+        playPauseBtn.textContent = "⏸️ Pause";
+      }
+    });
+
+    slider.addEventListener('input', () => {
+      pauseRadar();
+      playPauseBtn.textContent = "▶️ Play";
+      showFrame(parseInt(slider.value));
+    });
+
+    loadRadar();
+    setInterval(loadRadar, 5 * 60 * 1000);
+
+    // Alerts
     fetch('https://api.weather.gov/alerts/active')
       .then(response => response.json())
       .then(data => {
         data.features.forEach(alert => {
           const coords = alert.geometry?.coordinates;
-          if (!coords) return;
+          const eventType = alert.properties.event;
+          let color = "orange";
 
-          const polygon = L.polygon(coords[0].map(([lng, lat]) => [lat, lng]), {
-            color: alert.properties.severity === "Severe" ? "red" : "orange",
-            weight: 2
-          }).addTo(map);
+          if (eventType.includes("Tornado")) color = "red";
+          else if (eventType.includes("Severe Thunderstorm")) color = "yellow";
+          else if (eventType.includes("Flood")) color = "green";
+          else if (eventType.includes("Winter")) color = "purple";
+          else if (eventType.includes("Special Weather Statement")) color = "blue";
 
-          polygon.on('click', () => {
-            showWarningInPanel(alert.properties.event, alert.properties.description || alert.properties.headline);
-          });
+          if (coords) {
+            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+              color,
+              fillOpacity: 0.3,
+              weight: 2
+            }).addTo(map);
+
+            poly.on('click', () => {
+              const content = `
+                <b>${alert.properties.event}</b><br>
+                <b>Area:</b> ${alert.properties.areaDesc}<br>
+                <b>Effective:</b> ${new Date(alert.properties.effective).toLocaleString()}<br>
+                <b>Expires:</b> ${new Date(alert.properties.expires).toLocaleString()}<br>
+                <b>Instructions:</b> ${alert.properties.instruction || 'N/A'}<br>
+                <b>Description:</b> ${alert.properties.description || 'N/A'}
+              `;
+              document.getElementById('warningContent').innerHTML = content;
+            });
+          }
         });
       });
+
+    // Make warning panel draggable
+    const warningPanel = document.getElementById('warningPanel');
+    let isDragging = false;
+    let offsetX = 0;
+    let offsetY = 0;
+
+    warningPanel.addEventListener('mousedown', function(e) {
+      isDragging = true;
+      offsetX = e.clientX - warningPanel.offsetLeft;
+      offsetY = e.clientY - warningPanel.offsetTop;
+      warningPanel.style.cursor = 'grabbing';
+    });
+
+    document.addEventListener('mousemove', function(e) {
+      if (isDragging) {
+        warningPanel.style.left = (e.clientX - offsetX) + 'px';
+        warningPanel.style.top = (e.clientY - offsetY) + 'px';
+      }
+    });
+
+    document.addEventListener('mouseup', function() {
+      isDragging = false;
+      warningPanel.style.cursor = 'move';
+    });
   </script>
 </body>
 </html>
